Day 4: 角色权限控制（JWT 加入 role + @PreAuthorize）
- JwtUtils: generateToken 加入 role claim，新增 getRoleFromToken
- JwtAuthenticationFilter: 解析 role → ROLE_ADMIN/ROLE_STUDENT
- UserServiceImpl: 登录时传入 user.getRole()
- StudyRoomController: 增/改/删 加 @PreAuthorize("hasRole('ADMIN')")